@@ -22,6 +22,7 @@ define( function( require ) {
   var Node = require( 'SCENERY/nodes/Node' );
   var PHFaucetNode = require( 'PH_SCALE/common/view/PHFaucetNode' );
   var Property = require( 'AXON/Property' );
+  var RatioNode = require( 'PH_SCALE/common/view/RatioNode' );
   var ResetAllButton = require( 'SCENERY_PHET/ResetAllButton' );
   var ScreenView = require( 'JOIST/ScreenView' );
   var SoluteComboBox = require( 'PH_SCALE/common/view/SoluteComboBox' );
@@ -75,14 +76,17 @@ define( function( require ) {
     var solventFluidNode = new FaucetFluidNode( model.solventFaucet, model.solution.solvent, SOLVENT_FLUID_HEIGHT, mvt );
     var drainFluidNode = new FaucetFluidNode( model.drainFaucet, model.solution, DRAIN_FLUID_HEIGHT, mvt );
 
+    // 'H3O+/OH- ratio' representation
+    var ratioNode = new RatioNode( model.solution );
+    ratioVisibleProperty.link( function( visible ) {
+      ratioNode.visible = visible;
+    } );
+
     // 'molecule count' representation
     var moleculeCountNode = new MoleculeCountNode( model.solution );
     moleculeCountVisibleProperty.link( function( visible ) {
       moleculeCountNode.visible = visible;
     } );
-
-    // 'H3O+/OH- ratio' representation
-    //TODO node goes here, visibility linked to ratioVisibleProperty
 
     // beaker controls
     var beakerControls = new BeakerControls( ratioVisibleProperty, moleculeCountVisibleProperty );
@@ -124,6 +128,7 @@ define( function( require ) {
     rootNode.addChild( dropperFluidNode );
     rootNode.addChild( dropperNode );
     rootNode.addChild( solutionNode );
+    rootNode.addChild( ratioNode );
     rootNode.addChild( beakerNode );
     rootNode.addChild( moleculeCountNode );
     rootNode.addChild( volumeIndicatorNode );
@@ -137,6 +142,8 @@ define( function( require ) {
     rootNode.addChild( soluteListParent ); // last, so that combo box list is on top
 
     // Layout
+    ratioNode.centerX = beakerNode.centerX; //TODO delete
+    ratioNode.centerY = beakerNode.top + ( 0.3 * beakerNode.height ); //TODO delete
     moleculeCountNode.right = mvt.modelToViewX( model.beaker.right ) - 20;
     moleculeCountNode.bottom = beakerNode.bottom - 25;
     beakerControls.centerX = beakerNode.centerX;
